[package]
name = "stategy"
version = "0.1.0"
authors = ["genrythm <nhatphuong0108@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../../" }
bevy_mod_picking = { path = "../bevy_mod_picking/" }

